infra/k8s/sprint-20-capstone/11-ingress-api.yaml
apiVersion: networking.k8s.io/v1                                                                                          
kind: Ingress                                                                                                             
metadata:       
  name: runmatic-ingress-api
  namespace: default
  annotations: 
   nginx.ingress.kubernetes.io/rewrite-target: /api/$2
   nginx.ingress.kubernetes.io/use-regex: "true"
spec:                                                                              
  ingressClassName: nginx                                         
  rules:                                                                         
    - host: runmatic.local                                                                      
      http:               
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:                                                                                                      
              service:
                name: api-service                                                        
                port:                                                 
                  number: 8000
